--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ if(TIMEMORY_USE_COVERAGE)
 endif()
 
 set(_EXCLUDE)
-if(NOT TIMEMORY_BUILD_TESTING)
+if(NOT TIMEMORY_BUILD_TESTING OR TIMEMORY_BUILD_EXCLUDE_FROM_ALL)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
 endif()
 
