--- a/source/tools/timemory-avail/CMakeLists.txt
+++ b/source/tools/timemory-avail/CMakeLists.txt
@@ -1,6 +1,11 @@
 
-if(NOT TIMEMORY_BUILD_AVAIL)
+if(NOT timemory_MAIN_PROJECT OR NOT TIMEMORY_BUILD_AVAIL OR TIMEMORY_BUILD_EXCLUDE_FROM_ALL)
   set(_EXCLUDE EXCLUDE_FROM_ALL)
+endif()
+
+set(_USE_TIMING 0)
+if(TIMEMORY_BUILD_TESTING OR TIMEMORY_BUILD_MINIMAL_TESTING OR TIMEMORY_CI)
+    set(_USE_TIMING 1)
 endif()
 
 add_executable(timemory-avail ${_EXCLUDE}
@@ -11,7 +16,7 @@ target_include_directories(timemory-avail PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
 target_link_libraries(timemory-avail PRIVATE
     timemory::timemory-compile-options
-    timemory::timemory-compile-timing
+    $<IF:${_USE_TIMING},timemory::timemory-compile-timing,>
     timemory::timemory-extensions
     timemory::timemory-headers
     timemory::timemory-python)
