--- a/source/tools/timemory-mpip/CMakeLists.txt
+++ b/source/tools/timemory-mpip/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
-if(NOT TIMEMORY_BUILD_MPIP_LIBRARY OR NOT TIMEMORY_USE_MPI OR NOT TIMEMORY_USE_GOTCHA OR
-    NOT TARGET timemory::timemory-cxx-shared OR TIMEMORY_SKIP_BUILD)
+if(NOT TIMEMORY_USE_GOTCHA OR NOT TIMEMORY_USE_MPI OR NOT TARGET timemory::timemory-cxx-shared)
     return()
+endif()
+
+if(NOT TIMEMORY_BUILD_MPIP_LIBRARY OR TIMEMORY_SKIP_BUILD OR TIMEMORY_BUILD_EXCLUDE_FROM_ALL)
+    set(_EXCLUDE EXCLUDE_FROM_ALL)
 endif()
 
 project(timemory-mpip-tool)
 
-add_library(timemory-mpip-shared SHARED ${PROJECT_SOURCE_DIR}/timemory-mpip.cpp)
+add_library(timemory-mpip-shared SHARED ${_EXCLUDE} ${PROJECT_SOURCE_DIR}/timemory-mpip.cpp)
 add_library(timemory::timemory-mpip-shared ALIAS timemory-mpip-shared)
 
 # public link targets
