--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -153,6 +153,8 @@ function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNC
         NAME                ${SCRIPT_NAME}-console-script-test
         COMMAND             ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} --help
         WORKING_DIRECTORY   ${PROJECT_BINARY_DIR})
+    set_tests_properties(${SCRIPT_NAME}-console-script-test PROPERTIES
+        ENVIRONMENT         "PYTHONPATH=${PROJECT_BINARY_DIR}:$ENV{PYTHONPATH}")
 
 endfunction()
 
