--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ jobs:
         - TRAVIS_PYTHON_VERSION=3.8
         - CONDA_OS=MacOSX
         - CONFIG_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_BUILD_PYTHON_LINE_PROFILER=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
-        - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=17'
-        - CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
+        - BUILD_ARGS='--minimal --build-libs shared --cxx-standard=17'
+        #- CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
       # addons:
       #  homebrew:
       #    casks:
@@ -145,7 +145,7 @@ before_install:
     conda config --set always_yes yes --set changeps1 no
 
 install:
-  - conda create -c conda-forge -c defaults -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake pip ${CONDA_EXTRA}
+  - conda create -c conda-forge -c defaults -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake pip pydot ${CONDA_EXTRA}
   - source activate
   - conda activate pyctest
   - python -m pip install -r requirements.txt
