--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -11,71 +11,71 @@ set(CMAKE_UNITY_BUILD OFF)
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-jump library
 #
-message(STATUS "Adding source/tools/timemory-jump...")
+timemory_message(STATUS "Adding source/tools/timemory-jump...")
 add_subdirectory(timemory-jump)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-stubs library
 #
-message(STATUS "Adding source/tools/timemory-stubs...")
+timemory_message(STATUS "Adding source/tools/timemory-stubs...")
 add_subdirectory(timemory-stubs)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-compiler-instrument library
 #
-message(STATUS "Adding source/tools/timemory-compiler-instrument...")
+timemory_message(STATUS "Adding source/tools/timemory-compiler-instrument...")
 add_subdirectory(timemory-compiler-instrument)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-avail tool
 #
-message(STATUS "Adding source/tools/timemory-avail...")
+timemory_message(STATUS "Adding source/tools/timemory-avail...")
 add_subdirectory(timemory-avail)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-pid tool
 #
-message(STATUS "Adding source/tools/timemory-pid...")
+timemory_message(STATUS "Adding source/tools/timemory-pid...")
 add_subdirectory(timemory-pid)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timem tool
 #
-message(STATUS "Adding source/tools/timemory-timem...")
+timemory_message(STATUS "Adding source/tools/timemory-timem...")
 add_subdirectory(timemory-timem)
-
-#----------------------------------------------------------------------------------------#
-# Build and install timemory-run
-#
-message(STATUS "Adding source/tools/timemory-run...")
-add_subdirectory(timemory-run)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-mpip library
 #
-message(STATUS "Adding source/tools/timemory-mpip...")
+timemory_message(STATUS "Adding source/tools/timemory-mpip...")
 add_subdirectory(timemory-mpip)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-ompt library
 #
-message(STATUS "Adding source/tools/timemory-ompt...")
+timemory_message(STATUS "Adding source/tools/timemory-ompt...")
 add_subdirectory(timemory-ompt)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-ncclp library
 #
-message(STATUS "Adding source/tools/timemory-ncclp...")
+timemory_message(STATUS "Adding source/tools/timemory-ncclp...")
 add_subdirectory(timemory-ncclp)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-mallocp library
 #
-message(STATUS "Adding source/tools/timemory-mallocp...")
+timemory_message(STATUS "Adding source/tools/timemory-mallocp...")
 add_subdirectory(timemory-mallocp)
+
+#----------------------------------------------------------------------------------------#
+# Build and install timemory-run
+#
+timemory_message(STATUS "Adding source/tools/timemory-run...")
+add_subdirectory(timemory-run)
 
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-connector libraries for kokkos
 #
-message(STATUS "Adding source/tools/kokkos-connector...")
+timemory_message(STATUS "Adding source/tools/kokkos-connector...")
 add_subdirectory(kokkos-connector)
